--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="status">
         <p class="result">[Enter] Game Start</p>
         <p class="level">レベル: <span id="level">1</span></p>
         <p class="score">スコア: <span id="score">0</span></p>
@@ -15,7 +15,6 @@
         <p class="question"></p>
         <div class="timer">タイム: <span id="time">30</span></div>
         <div class="keyboard-wrapper">
-            <!-- 仮想キーボードを追加する -->
             <div class="keys">
                 <input type="button" value="Q" onclick="typed(event)" />
                 <input type="button" value="W" onclick="typed(event)" />
@@ -60,5 +59,4 @@
     <script src="main.js"></script>
 </body>
 </html>
-
 
